flux/apps/bookshelf/calibre-web-automated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web-automated
  namespace: media-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cwa
  template:
    metadata:
      labels:
        app: cwa
    spec:
      containers:
      - name: cwa
        image: crocodilestick/calibre-web-automated:dev
        ports:
        - containerPort: 8083
        volumeMounts:
        - name: config
          mountPath: /config
        - name: ingest
          mountPath: /cwa-book-ingest
        - name: library
          mountPath: /calibre-library
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: cwa-config
      - name: ingest
        persistentVolumeClaim:
          claimName: book-ingest
      - name: library
        persistentVolumeClaim:
          claimName: bookshelf-books
---
apiVersion: v1
kind: Service
metadata:
  name: cwa
  namespace: media-stack
spec:
  selector:
    app: cwa
  ports:
  - port: 8083
    targetPort: 8083
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cwa-opds
  namespace: media-stack
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.priority: "20"
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
spec:
  ingressClassName: traefik
  rules:
  - host: opds.pxldi.de
    http:
      paths:
      - path: /opds
        pathType: Prefix
        backend:
          service:
            name: cwa
            port:
              number: 8083
      - path: /kosync
        pathType: Prefix
        backend:
          service:
            name: cwa
            port:
              number: 8083
  tls:
  - hosts:
    - opds.pxldi.de
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cwa-web
  namespace: media-stack
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-authelia-forwardauth@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.priority: "10"
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
spec:
  ingressClassName: traefik
  rules:
  - host: calibre.pxldi.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cwa
            port:
              number: 8083
  tls:
  - hosts:
    - calibre.pxldi.de
